# simulacra

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32c5  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32s3
components/simulacra_radar/: CMakeLists.txt  config_wire.c  config_wire.h  enroll_wire.c  enroll_wire.h  law3.h  learn_db.c  learn_db.h  learn_record.h  learn_wire.c  learn_wire.h  radar_font.h  radar_geom.c  radar_geom.h  radar_gfx.c  radar_gfx.h  radar_key.h  radar_render.c  radar_render.h  radar_sigil.c  radar_sigil.h  radar_theme.h  radar_ui.c  radar_ui.h  radar_wire.c  radar_wire.h  sig_class_name.h  sig_db.c  sig_db.h  sig_match.c  sig_match.h  sig_seed.c  sig_seed.h  sig_wire.c  sig_wire.h  sim_ctrl_key.h  threat_escalation.h  threat_sig.h
components/tweetnacl/: CMakeLists.txt  randombytes.c
cyd/: CMakeLists.txt  sdkconfig.defaults
cyd/main/: CMakeLists.txt  cyd_main.c  fleet_db.c  fleet_db.h  fleet_status.c  fleet_status.h  sim_ctrl_sk.h
docs/: ROADMAP.md
docs/design/plans/: 2026-06-24-m3-churn-engine.md  2026-06-25-m4-payload-templates.md  2026-06-25-m5-observe-model.md  (+23 more)
docs/hardware/: portable-feather-s3-build.md
main/: CMakeLists.txt  ble_devices.c  ble_devices.h  churn.c  churn.h  churn_adv.c  churn_adv.h  churn_selftest.c  churn_selftest.h  coexist.c  coexist.h  decoy_vendors.h  detect.c  detect.h  drift.c  drift.h  esp_now_link.c  esp_now_link.h  espnow_sniff.c  espnow_sniff.h  fleet.c  fleet.h  fleet_key.c  fleet_key.h  fleet_pop.c  fleet_pop.h  generate.c  generate.h  identity.h  law3.c  learn.c  learn.h  observe.c  observe.h  phantom.c  phantom.h  probe.c  probe.h  probe_agents.c  probe_agents.h  (+28 more)
tools/: gen_ctrl_key.py
tools/decoy_audit/: .gitignore  Makefile  README.md  ble_hs_adv.c  capture_profile.py  discriminators.py  learn_stub.c  roster_stub.c  run.ps1  scorecard.py  synth_dump.c
tools/pcap_learn/: .gitignore  Makefile  README.md  harness.c  parse_pcap.py  run.ps1  sig_scan.c
tools/probe_audit/: .gitignore  Makefile  README.md  probe_behavior_scorecard.py  probe_dump.c  run.ps1
tools/radar_audit/: .gitignore  fleet_dump.c  run.ps1  ui_dump.c
tools/seq_gate/: README.md  run_seq_gate.ps1
(+109 files in other folders)
